--- a/Dashboard.html
+++ b/Dashboard.html
@@ -80,7 +80,7 @@
      </li>
      <li class="profile">
          <div class="profile-details">
-           <img src="profile.jpg" alt="profileImg">
+           <img src="img/profile.jpg" alt="profileImg">
            <div class="name_job">
              <div class="name">Prem Shahi</div>
              <div class="job">Web designer</div>
