--- a/Dashboard.html
+++ b/Dashboard.html
@@ -82,7 +82,7 @@
          <div class="profile-details">
            <img src="img/profile.jpg" alt="profileImg">
            <div class="name_job">
-             <div class="name">Prem Shahi</div>
+             <div class="name">Tiago Dev</div>
              <div class="job">Web designer</div>
            </div>
          </div>
