--- a/Dashboard.html
+++ b/Dashboard.html
@@ -8,7 +8,7 @@
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>  
-   
+
 <body>
   <div class="sidebar">
     <div class="logo-details">
@@ -80,7 +80,7 @@
      </li>
      <li class="profile">
          <div class="profile-details">
-           <img src="img/profile.jpg" alt="profileImg">
+           <img src="img/profile.png" alt="profileImg">
            <div class="name_job">
              <div class="name">Tiago Dev</div>
              <div class="job">Web designer</div>
